--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,19 +8,22 @@ spring:
     url: jdbc:mysql://localhost:3306/lyc?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: admin123
+code:
+  author: lyc
+  company: com.jiopeel  #公司名
+  view:
+    urlPrefix: /admin
+    suffix: .html  #生成模板的后缀
+    path: F:\webspace\jiopeel-parent\jiopeel-admin-web\src\main\resources\templates\blog
+  java:
+    beanPath: F:\webspace\jiopeel-parent\jiopeel-bean\src\main\java\com\jiopeel\bean\blog
+    eventPath: F:\webspace\jiopeel-parent\jiopeel-admin\src\main\java\com\jiopeel\event\blog
+    logicPath: F:\webspace\jiopeel-parent\jiopeel-logic\src\main\java\com\jiopeel\logic\blog
 #code:
 #  author: lyc
 #  company: com.jiopeel  #公司名
 #  view:
 #    suffix: .html  #生成模板的后缀
-#    path: F:\lkk\SpringbootDEMO\src\main\resources\templates\sys
+#    path: \Users\lyc\workspace\SpringbootDEMO\src\main\resources\templates\sys
 #  java:
-#    path: F:\lkk\SpringbootDEMO\src\main\java\com\jiopeel\sys
-code:
-  author: lyc
-  company: com.jiopeel  #公司名
-  view:
-    suffix: .html  #生成模板的后缀
-    path: \Users\lyc\workspace\SpringbootDEMO\src\main\resources\templates\sys
-  java:
-    path: \Users\lyc\workspace\SpringbootDEMO\src\main\java\com\jiopeel\sys
+#    path: \Users\lyc\workspace\SpringbootDEMO\src\main\java\com\jiopeel\sys
